2008-04-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/dialogs.c:
   Fix GTK warnings in open file dialog by using a positive response ID
   for the View button.


2008-04-01  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/interface.c, src/plugins.c, geany.glade:
   Move Load Tags item from File to Tools menu.
   Capitalize Page Setup item.
   Add separator before Plugin Manager item.
 * src/navqueue.c, src/msgwindow.c:
   Make navqueue_goto_line() ignore an invalid old document index, and
   ignore any documents that don't have a tagmanager work object.
   Make Next Error and Next Message commands add positions to the
   navqueue, so the user can return to where they were and also so they
   can move backwards through error and message items.


2008-03-31  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c, src/interface.c, src/vte.c, plugins/export.c,
   plugins/classbuilder.c, geany.glade:
   Add missing mnemonics (except for 3 popup menu items, ran out of
   letters).
   Capitalize some menu items.
 * src/interface.c, geany.glade:
   Add 3 remaining mnemonics for popup menu, copy Insert include
   mnemonic - even though these have conflicts, just let GTK toggle
   between them.


2008-03-28  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c:
   Unfold hidden code when the fold point modified
   (e.g. commented out, fixes #1923350).
 * geany.pc.in:
   Add datadir and localedir to Geany's pkgconfig file.
 * src/callbacks.c:
   Fix usage of wrong pointer when showing the toolbar popup menu.


2008-03-27  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * plugins/vcdiff.c:
   Rename VCDiff plugin Version Diff.
 * src/plugindata.h:
   Document most of GeanyData, add links to files.
   Make PluginData alias deprecated.
 * src/utils.c:
   Fix getting asked whether to reload a file twice, when a disk check
   is forced immediately after a disk check has been done.